--- a/rm1.css
+++ b/rm1.css
@@ -1,12 +1,3 @@
-/* Reset some default margin and padding for elements */
-body,
-h1,
-h2,
-p {
-    margin: 0;
-    padding: 0;
-}
-
 /* Style the header */
 header {
     text-align: center;
@@ -15,6 +6,10 @@ header {
 }
 #header-logo{
     width: 1000px;
+    height: auto;
+}
+#donateIcons{
+    width:50px;
     height: auto;
 }
 
